# sem7_os_lab6

./: CMakeLists.txt  Taskfile.yml
gui/: CMakeLists.txt  Taskfile.yml
gui/src/: main.cpp
include/: serial_port.h
server/: .gitignore  CMakeLists.txt  Taskfile.yml  gui.py  requirements.txt
server/include/: logger.h  repository.h  server.h  utils.h
server/src/: main.c  repository.c
server/src/ports/linux/: logger.c  server.c  utils.c
server/src/ports/win/: logger.c
src/: main.c
src/ports/linux/: logger.c  serial_port.c
src/ports/win/: logger.c  serial_port.c  server.c  utils.c
